--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -199,27 +199,58 @@ h3.title {
 
 /*-- //Team --*/
 .list-container{
-	margin: 0 1%;
-	margin-top: 0px;
 	display: grid;
-    grid-column-gap: 10px;
-    grid-template-columns: auto auto auto;
-    background-color: white;
-    padding: 50px;
-    width: 100%;
-    height: 110%;
+    grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
+    grid-gap: 30px;
+    align-items: stretch;
 }
 .list{
-	margin-left: 30px;
-	margin-top: 20px;
-	background-color: white;
-    border: 1px solid rgba(0, 0, 0, 0.8);
-    padding: 20px;
-    font-size: 15px;
-    text-align: center;
-    box-sizing: border-box;
-	box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
 	border: 1px solid #ccc;
-	height:400px; 
-	width: 380px;
+    box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+    height:400px; 
+    position: relative; 
+	margin: auto auto auto;
+	text-align: center;
+	align-items: center;
+	width: fit-content;
+}
+
+@media (max-width: 800px) {
+  .event-details-c{
+    margin: auto auto auto;
+  }
+  .event-details-l{
+    width: fit-content;
+    text-align: center;
+    align-items: center;
+    margin-left: auto;
+    margin-top: auto;
+    background-color: white;
+      border: 1px solid rgba(0, 0, 0, 0.8);
+      padding: 20px;
+      font-size: 15px;
+      text-align: center;
+      box-sizing: border-box;
+    box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+    border: 1px solid #ccc;
+  }
+  .detail-h1{
+    font-size: x-large;
+    margin-top: 5px;
+  }
+  .detail-3-1{
+    margin-top: 5px;
+    font-size: large;
+  }
+  .detail-4{
+    margin-top: 5px;
+    font-size: large;
+  }
+  .detail-p{
+    margin-top: 10px;
+  }
+  .details-img{
+    width: 250px;
+    height: 250px;
+  }
 }
