--- a/views/pages/user/details.ejs
+++ b/views/pages/user/details.ejs
@@ -4,8 +4,9 @@
     <%- include('../layout/head') %>
 </head>
 <body>
+    
     <%- include('../layout/header') %>
-    <br><br><br><br>
+    <main class="event-details-c" >
     <section class="event-details-c">
    
         
@@ -19,7 +20,7 @@
             <h4 class="detail-4">Country Code : <%=results[0].countrycode%></h4>
             <h4 class="detail-4"> Start Date :  <%= results[0].start_date %></h4> <h4 class="detail-4">  End Date : <%= results[0].end_date %>  </h4>
             <p class="detail-p"> about Event : <%= results[0].description%></p>
-            <a href="<%= results[0].url%> "> The url for event </a>  
+            <a href="<%= results[0].url%> " target="_blank"> The url for event </a>  
             <br> <br>
                <form action="/event/<%=  results[0].event_id %>?_method=DELETE" method='POST'>
             <button class="btn" type="submit">Delet This Event</button>
@@ -27,8 +28,8 @@
         </section>
        
     </section>
+</main>
     <%- include('../layout/footer') %>
-        <script src="js/app.js"></script>
-
+    <script src="../js/app.js"></script>
 </body>
 </html>
