--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -361,7 +361,10 @@ footer{
 	.footerOne form{
 		display: block;
 	}
-
+	.footerFour{
+		position: relative;
+		right: 50px;
+	}
 	.footerOne form button{
 		float: none;
 	}
